--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
-NODE_ENV=development
+NODE_ENV=development # này là để trong file package.json thì nó sẽ có dependencies và devDependencies, nếu NODE_ENV là production thì chỉ có những pakage trong dependencies mới được tải còn devDependencies không được tải vì devDependencies thì nó chỉ chứa những file hỗ trợ ltvien lúc code thôi nên khi ra spham rồi thì không cần nữa 
 PORT=8081
 #app hostname
 HOST_NAME=localhost
+
+DB_HOST=localhost
+DB_PORT=3307
+DB_USER=root
+DB_PASSWORD=123456
+DB_NAME=hoidanit
